# tree-sitter-llvm-mir

./: .gitignore  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  grammar.js  package.json  pyproject.toml  setup.py
bindings/c/: tree-sitter-llvm_mir.pc.in
bindings/go/: binding.go  binding_test.go  go.mod
bindings/node/: binding.cc  index.js
bindings/python/tree_sitter_llvm_mir/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterLlvmMir/: llvm_mir.h
src/: grammar.json  node-types.json  parser.c
test/corpus/: basic.mir  regressions.mir
